# lumina_iq

./: .gitignore  ADVANCED_RAG_FOR_QUESTIONS.md  ADVANCED_RAG_SYSTEM.md  COST_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LOGGING_IMPROVEMENTS.md  QA_GENERATION_SUMMARY.md  QUOTA_EXHAUSTION_FIX.md  RAG_CHANGES_SUMMARY.md  README.md  ULTRA_ADVANCED_QA_TECHNIQUES.md  USER_GUIDE.md  network_setup_guide.md  pyproject.toml  setup_client_access.py  setup_firewall.bat  test_parallel_processing.py  test_upload_functionality.py  update_frontend_env.py
api_rotation/: README.md  api_key_rotator.py  api_rotation.db  demo_rotation.py  setup_sqlite.py  test_backend_rotation.py  test_rotation.py  verify_integration.py
backend/: .env.example  .gitignore  ENVIRONMENT_SETUP.md  check_actual_usage.py  check_api_keys.py  debug_rag.py  document_tracking.db  main.py  package-lock.json  requirements.txt  requirements_optimized.txt  requirements_windows.txt  reset_collection.py  run.py  simple_test.py  smoke_test_together.py  start_optimized.py  test_advanced_rag.py  test_advanced_rag_strategies.py  test_api_keys_quota.py  test_auth.py  test_chat_debug.py  test_concurrent_performance.py  test_nltk_integration.py  test_qdrant_batching.py  test_simple_concurrent.py  test_together_demo.py  test_together_integration.py
backend/config/: settings.py
books/: sample_book.txt
frontend/: .env  .env.example  package-lock.json  package.json
learning/: create-unified-installer.ps1  test_cache.py
microservices/: ARCHITECTURE_SUMMARY.md  MIGRATION_STRATEGY.md  README.md  docker-compose.yml
(+96 files in other folders)
